stats page back up

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	#box {
 		width: 100%;
-		height: 100%;
+		height: 175%;
 		background: rgba(80, 80, 80, 1);
 		font-family: "Roboto Light", sans-serif;
 		color: white;
@@ -22,6 +22,7 @@
 
 	#titletext {
 		padding-top: 0.35%;
+		padding-left: 0.35%;
 		font-size: 2.5vh;
 	}
 
@@ -29,7 +30,7 @@
 		margin-left: 5px;
 		margin-top: 3px;
 		font-size: 2vh;
-		line-height: 1.5;
+		line-height: 1.4;
 	}
 
 	#bodytitle {
@@ -37,12 +38,12 @@
 	}
 
 	#cardoverview {
-		height: 10%;
+		height: 5%;
 	}
 
 	#cardbreakdown {
-		height: 50%;
-		transform: translateY(50%);
+		height: 78%;
+		transform: translateY(5%);
 	}
 
 	#credits {
@@ -95,9 +96,6 @@
 			{{{usage}}}
 		</p>
 	</div>
-	<font id="credits">
-		Want to use this API? PM Melmsie#0006 and ask how!
-	</font>
 </div>
 
 </html>
